--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,6 @@ python:
   - "2.7"
 cache: pip
 install:
-  - pip install --user -r requirements.txt
+  - pip install -r requirements.txt
 script:
   - pytest test.py
