--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,9 @@
 language: python
+
 python:
+
   - "2.7"
-cache: pip
-install:
-  - pip install -r requirements.txt
-script:
-  - pytest test.py
+
+script: 
+
+  - python test.py
